# course_work_3

./: .gitignore  main.py  pyproject.toml
classes/: classes.py  functions.py
tests/: test_classes.py  test_functions.py
