[tool.poetry]
name = "course-project-3"
version = "0.1.0"
description = ""
authors = ["Dmitry Krasheninnikov <ice_eyes@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
